--- a/app/views/checkouts/shipping.html.erb
+++ b/app/views/checkouts/shipping.html.erb
@@ -30,7 +30,7 @@
                         <%= f.text_field :postal_code, placeholder: 'Postal Code', class: 'form-control' %>
                     </div>
                     <div class='col-12 d-flex justify-content-end'>
-                        <%= f.submit "Order Summary ->", class: 'btn btn-outline-primary' %>
+                        <%= f.submit "Order Summary ->", class: 'btn btn-success' %>
                     </div>
                 <% end %>
             </div>
